--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,23 +1,13 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
   hello: "Hello world"
+  hello: 		"哈摟，世界"
+  menu_a: 	"About Hong Tong"
+  menu_a_a: " Company Overview"
+  menu_a_b: "Company History"
+  menu_b: 	"Product Categories"
+  menu_c: 	"News"
+  menu_d:		"Contact Us"
+  product_desc: "Description"
+  product_feature: "Characteristics"
+  product_detail: "Applications"
+  final_product: "Finished Products"
