--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,3 +11,6 @@ en:
   product_feature: "Characteristics"
   product_detail: "Applications"
   final_product: "Finished Products"
+  breadcrumb_home: "Home"
+  nav_tel: 	"Call Us"
+  nav_mail: "Email Us"
