--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -10,3 +10,6 @@
   product_feature: "產品特性"
   product_detail: "產品用途"
   final_product: "加工成品"
+  breadcrumb_home: "首頁"
+  nav_tel: 	"聯絡電話"
+  nav_mail: "連絡信箱"
