--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,3 +14,4 @@ en:
   nav_tel: 	"Call Us"
   nav_mail: "Email Us"
   index_s:  "Service"
+  address: "2F., No.582, Jiangong Rd., Sanmin Dist., Kaohsiung City 807, Taiwan (R.O.C.)"
